# APK-Bank-system

./: .gitignore  1235638135.txt  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  concepts.md  cryptoServer.txt  main.cpp  report.md  stockServer.txt
delete/: Bank.txt  Crypto.txt  OrderEvent.txt  User.txt
delete_items/: cards.h  concepts.h  currencyExchanage.cpp  currencyExchange.hpp  processor.h
include/: Bank.h  Bank.txt  Cli.h  Logger.h  Printer.h  StockAccount.h  Tx.h  TxDetails.h  User.h  account.h  account.hpp  accounts.h  bank.h  cards.h  currencyExchange.hpp  exceptions.h  log.hpp  logger.h  memory_pool.h  messageQueue.h  order.h  processor.h  savingsAccount.h  savingsAccount.hpp  stock.hpp  stockaccount.h  stocks.h  stockserver.h  transaction.h  transaction.hpp  transactions.h  tx_details.h  user.h  utils.h
include/account/: Account.h  AssetAccount.h
include/asset/: Calculator.h  Crypto.h  Manager.h  MessageQueue.h  Server.h  Stock.h  Traits.h  traits.h
include/bank/: Account.h  Bank.h  Tx.h  TxDetails.h  User.h
include/exchange/: Account.h  Calculator.h  Manager.h  Miner.h  MonitorResource.h  OrderArray.h  Server.h  asset.hpp  dashboard.h  message.hpp  trait.hpp  tx.hpp  util.hpp
include/server/: MessageQueue.h  MessageVisitor.h  Server.h  StockAccount.h
include/stock/: MessageQueue.h  MsgQueue.h  (+8 more)
src/: Account.cpp  Bank.cpp  Cli.cpp  Logger.cpp  StockAccount.cpp  Tx.cpp  account.cpp  bank.cpp  currencyExchanage.cpp  exeptions.cpp  logger.cpp  main.cpp  stockaccount.cpp  stockserver.cpp  transaction.cpp  tx_details.cpp  utils.cpp
(+90 files in other folders)
